# axum-boilerplate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  sqlx-data.json
config/: local.yaml  production.yaml
migrations/: 0_create_users.up.sql
src/: database.rs  error.rs  lib.rs  main.rs  server.rs  telemetry.rs  test_helpers.rs
src/api/: mod.rs
src/api/auth/: mod.rs
src/api/auth/change_password/: mod.rs  post.rs
src/api/auth/google/: get.rs  mod.rs
src/api/auth/google/callback/: get.rs
src/api/auth/login/: post.rs
src/api/auth/refresh/: post.rs
src/api/auth/signup/: post.rs
src/api/auth/verify/: get.rs
src/api/health_check/: get.rs
src/api/health_check/protected/: get.rs  mod.rs
src/config/: auth.rs  database.rs  email_client.rs  mod.rs  oauth.rs  password_hasher.rs  server.rs
src/domain/: mod.rs  validated_password.rs
src/extractors/: mod.rs  user.rs  validated.rs
src/services/: cookie.rs  email.rs  hash.rs  mod.rs  oauth.rs  token.rs
