[package]
name = "axum-boilerplate"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Stanislav Stoyanov <grimerssy@gmail.com>"
]
default-run = "axum-boilerplate"

[[bin]]
name = "email_server"

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

axum = { version = "0.6.6", features = ["headers", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }
tower-request-id = "0.2.1"
tower-cookies = { version = "0.9.0", features = ["private"] }

validator = { version = "0.16.0", features = ["derive"] }

argon2 = { version = "0.4.1", features = ["std"] }
oauth2 = "4.3.0"
jsonwebtoken = "8.2.0"

sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "offline", "uuid"] }

anyhow = "1.0.69"
thiserror = "1.0.38"

config = { version = "0.13.3", default-features = false, features = ["yaml"] }

serde = { version = "1.0.152", features = ["derive"] }
serde_with = "2.2.0"
serde-aux = { version = "4.1.2", default-features = false }

tracing = "0.1.37"
tracing-log = { version = "0.1.3", default-features = false }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

async-trait = "0.1.64"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8.0", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dev-dependencies]
fake = "2.5.0"
linkify = "0.9.0"
once_cell = "1.17.1"
serde_json = { version = "1.0.93", default-features = false }
serde_urlencoded = "0.7.1"
wiremock = "0.5.17"
